# SecureFS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: advanced_usage.py  basic_usage.py  migration_example.py
securefs/: __init__.py  __version__.py  core.py  exceptions.py  utils.py
tests/: test_basic.py  test_cache.py  test_edge_cases.py  test_error_handling.py  test_integration.py  test_no_encryption.py  test_performance.py  test_thread_safety.py
